adds move-down-curtain-handle-5000 animation for min-width:5000px

--- a/src/App.css
+++ b/src/App.css
@@ -4134,6 +4134,12 @@ padding-top: 20px;
   animation-fill-mode: forwards;
 }
 
+@keyframes move-down-curtain-handle-5000{
+  to{
+    top: 700px;
+  }
+}
+
 .land, .land:after{
     width: 420px;
 }
