adjust the margin and size of bio-img-container img for different screen sizes

--- a/src/App.css
+++ b/src/App.css
@@ -2267,8 +2267,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 240px 100px;
-    width: 100%;
+    margin: 250px auto;
+    width: 150%;
   }
 
   .x{
@@ -2670,8 +2670,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 140px 100px;
-    width: 100%;
+    margin: 140px auto;
+    width: 160%;
   }
 
   .project-div{
@@ -2705,8 +2705,8 @@ iframe{
   }
  
   .bio-img-container img{
-    margin: 180px 100px;
-    width: 100%;
+    margin: 100px auto;
+    width: 150%;
   }
 
   .project-div{
@@ -2800,8 +2800,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 150px 100px;
-    width: 100%;
+    margin: 130px auto;
+    width: 150%;
   }
 
   .project-div{
@@ -2897,7 +2897,7 @@ iframe{
   }
 
   .bio-img-container img{
-    margin-top: 30px;
+    margin: 100px auto;
   }
 
   .skill-slide{
@@ -2964,8 +2964,7 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 150px 100px;
-    width: 100%;
+    margin: 100px auto;
   }
 
   .project-div{
@@ -3048,8 +3047,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 130px 100px;
-    width: 80%;
+    margin: 100px auto;
+    width: 140%;
    }
 
   .project-div{
@@ -3687,8 +3686,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 100px 100px;
-    width: 100%;
+    margin: 150px auto;
+    width: 140%;
   }
 
   .project-div{
@@ -3870,7 +3869,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 150px 100px;
+    margin: 150px auto;
+    width: 140%;
   }
 
   .project-div{
@@ -4151,8 +4151,8 @@ iframe{
   }
 
   .bio-img-container img{
-    margin: 180px 100px;
-    width: 100%;
+    margin: 180px auto;
+    width: 140%;
   }
 
   .project-div{
