--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -1,1 +1,43 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.light-buttons .light-off {
+  position: absolute;
+  background: rgba(9, 55, 99, 0.8);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120vh;
+  z-index: 7;
+}
+
+.light-buttons button {
+  position: absolute;
+  -webkit-box-shadow: -5px -5px 10px 3px gray inset;
+          box-shadow: -5px -5px 10px 3px gray inset;
+  background: rgba(248, 248, 248, 0.5);
+  border: 1px solid transparent;
+  top: 20px;
+  left: 600px;
+  width: 100px;
+  height: 50px;
+  border-radius: 90px;
+  font-weight: bold;
+  padding: 10px;
+  outline: none;
+}
+
+.light-buttons .light-off button {
+  -webkit-box-shadow: -5px -5px 10px 3px #02427f inset;
+          box-shadow: -5px -5px 10px 3px #02427f inset;
+}
+
+.myname {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: absolute;
+  z-index: 6;
+  font-family: 'Parisienne', cursive;
+  font-size: 45px;
+  font-weight: bold;
+  text-shadow: 0px 3px 0px #b2a98f, 0px 14px 10px rgba(0, 0, 0, 0.15), 0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1);
+}
+/*# sourceMappingURL=style.css.map */
