--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -40,4 +40,17 @@
   font-weight: bold;
   text-shadow: 0px 3px 0px #b2a98f, 0px 14px 10px rgba(0, 0, 0, 0.15), 0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1);
 }
+
+.css-art {
+  position: absolute;
+}
+
+.css-art p {
+  font-size: 23px;
+  font-family: 'Indie Flower', cursive;
+  position: relative;
+  color: black;
+  z-index: 6;
+  font-weight: bold;
+}
 /*# sourceMappingURL=style.css.map */
