scss updates style.css

--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -72,4 +72,15 @@
   left: 0px;
   top: 0px;
 }
+
+.shelf {
+  width: 150px;
+  height: 20px;
+  background: #A26877;
+  position: absolute;
+  left: 550px;
+  top: 170px;
+  -webkit-box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
+          box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
+}
 /*# sourceMappingURL=style.css.map */
