--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -83,4 +83,30 @@
   -webkit-box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
           box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
 }
+
+.calendar {
+  position: absolute;
+  top: 220px;
+  left: 75px;
+  -webkit-box-shadow: -5px 3px 14px -3px rgba(0, 0, 0, 0.75);
+          box-shadow: -5px 3px 14px -3px rgba(0, 0, 0, 0.75);
+}
+
+.calendar .month {
+  width: 100px;
+  height: 25px;
+  background: #e0494a;
+  color: white;
+  font-weight: bold;
+  padding-top: 3px;
+}
+
+.calendar .day {
+  width: 100px;
+  height: 50px;
+  background: white;
+  font-weight: bold;
+  padding-top: 10px;
+  font-size: 25px;
+}
 /*# sourceMappingURL=style.css.map */
