--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -55,8 +55,8 @@
 }
 
 .clock {
-  width: 150px;
-  height: 150px;
+  width: 180px;
+  height: 180px;
   border: 15px solid #e0494a;
   background: white;
   position: absolute;
@@ -108,5 +108,83 @@
   font-weight: bold;
   padding-top: 10px;
   font-size: 25px;
+}
+
+.book-holder li {
+  width: 25px;
+  height: 45px;
+  position: relative;
+  top: -45px;
+  left: 5px;
+  border-top: 0 solid transparent;
+  border-right: 10px solid #5B8C8C;
+  border-bottom: 10px solid #5B8C8C;
+  border-left: 0 solid transparent;
+}
+
+.book-holder li:nth-child(2) {
+  left: 120px;
+  top: -90px;
+  border-right: 0 solid transparent;
+  border-bottom: 10px solid #5B8C8C;
+  border-left: 10px solid #5B8C8C;
+}
+
+.book li {
+  position: relative;
+  top: -145px;
+  left: 44px;
+  width: 15px;
+  height: 55px;
+  background: #FFDB82;
+  border-radius: 3px;
+  -webkit-transform: rotate(205deg);
+          transform: rotate(205deg);
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+  font-size: 10px;
+  padding-left: 3px;
+}
+
+.book li:nth-child(2) {
+  top: -200px;
+  left: 61px;
+  color: white;
+  background: #F2636A;
+}
+
+.book li:nth-child(3) {
+  top: -255px;
+  left: 78px;
+  background: #FF8E8E;
+}
+
+.book li:nth-child(4) {
+  top: -310px;
+  left: 95px;
+  background: #3B6A72;
+  color: white;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  text-align: center;
+  z-index: -9;
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  background: #84cce4;
+}
+
+ul li {
+  list-style: none;
 }
 /*# sourceMappingURL=style.css.map */
