--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -4,3 +4,24 @@
 @import './clock';
 @import './shelf';
 @import './calendar';
+@import './book_holder';
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    text-align: center;
+    z-index: -9;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    background:#84cce4;
+}
+
+ul li{
+    list-style: none;
+}
