comments out #off

--- a/src/App.css
+++ b/src/App.css
@@ -227,10 +227,10 @@ ul li{
   box-shadow: 1px 25px 34px 23px rgba(192,196,78,1);
 }
 
-#off{
+/* #off{
   display: none;
   background: transparent;
-}
+} */
 
 .chair{
   width: 180px;
