--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -202,6 +202,17 @@
           box-shadow: 1px 25px 34px 23px #c0c44e;
 }
 
+.chair {
+  width: 180px;
+  height: 150px;
+  position: absolute;
+  top: 340px;
+  left: 310px;
+  z-index: -1;
+  border-radius: 15px 15px 0 0;
+  background: #1f1e1f;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
