--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -628,6 +628,81 @@
           transform: rotate(15deg);
 }
 
+.plant-div {
+  position: absolute;
+  left: 150px;
+  top: 385px;
+}
+
+.plant-div .plant {
+  position: relative;
+  top: 90px;
+}
+
+.plant-div .plant li {
+  position: relative;
+  top: -53px;
+  left: 28px;
+  width: 20px;
+  height: 25px;
+  border-left: 1px solid #195532;
+  background: #2c8651;
+  -webkit-transform: rotate(15deg);
+          transform: rotate(15deg);
+  border-radius: 10% 90px;
+}
+
+.plant-div .plant li:nth-child(2) {
+  left: 38px;
+  top: -83px;
+  -webkit-transform: rotate(35deg);
+          transform: rotate(35deg);
+  -webkit-box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
+}
+
+.plant-div .plant li:nth-child(3) {
+  top: -103px;
+  left: 48px;
+  -webkit-transform: rotate(55deg);
+          transform: rotate(55deg);
+  -webkit-box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 5px 14px -3px rgba(0, 0, 0, 0.75);
+}
+
+.plant-div .vase-top {
+  width: 43px;
+  position: relative;
+  top: -15px;
+  left: 26px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #c4a393 transparent transparent transparent;
+  z-index: 2;
+}
+
+.plant-div .vase-top:before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: -5px;
+  display: inline-block;
+  width: 42.5px;
+  height: 7px;
+  background: #ddb8a6;
+}
+
+.plant-div .vase {
+  width: 35px;
+  height: 40px;
+  position: relative;
+  background: #ddb8a6;
+  bottom: 26px;
+  left: 30px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 92% 65%, 8% 65%);
+          clip-path: polygon(0 0, 100% 0, 92% 65%, 8% 65%);
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
