--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -749,6 +749,30 @@
   left: 50px;
 }
 
+.garbage-can {
+  width: 100px;
+  height: 130px;
+  background: #393e41;
+  position: absolute;
+  left: 40px;
+  top: 550px;
+  border-radius: 5px 5px 20px 20px;
+  -webkit-box-shadow: -3px 4px 14px -3px rgba(0, 0, 0, 0.75);
+          box-shadow: -3px 4px 14px -3px rgba(0, 0, 0, 0.75);
+}
+
+.garbage-can:before {
+  display: inline-block;
+  content: '';
+  background: rgba(0, 0, 0, 0.5);
+  width: 95px;
+  height: 7px;
+  border-radius: 50%;
+  position: absolute;
+  top: -2px;
+  left: 1px;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
