--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2043,6 +2043,16 @@
   }
 }
 
+.floor {
+  width: 120%;
+  height: 40vh;
+  position: absolute;
+  background-image: url("../images/wooden-floor.jpg");
+  z-index: -10;
+  top: 630px;
+  background-size: cover;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
