imports react_awesome_slider.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -19,6 +19,7 @@
 @import './post_its';
 @import './window';
 @import './floor';
+@import './react_awesome_slider';
 
 *{
     box-sizing: border-box;
