removes typo from react_awesome_slider.scss

--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -1,6 +1,6 @@
 .awssld, .bio-card, .contact-card{
     position: absolute !important;
-    width: 60% !important;s
+    width: 60% !important;
     z-index:6 !important;
     left: 400px;
     max-width: none !important;
