imports min_width_300px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -20,6 +20,7 @@
 @import './window';
 @import './floor';
 @import './react_awesome_slider';
+@import './min_width_300px';
 
 *{
     box-sizing: border-box;
