--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -21,6 +21,7 @@
 @import './floor';
 @import './react_awesome_slider';
 @import './min_width_300px';
+@import './min_width_350px';
 
 *{
     box-sizing: border-box;
