--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2506,6 +2506,26 @@
   }
 }
 
+/* iPhone 6/7/8 => 375 x 667 # Vertical done,
+   iPhone X => 375 x 812 # Vertical done,
+   iPhone XS => 375 x 812 # Vertical done,
+   Galaxy s7 => 360 x 640  # Vertical done*/
+@media only screen and (min-width: 375px) {
+  .floor {
+    width: 350%;
+  }
+  .postits {
+    left: -400px;
+  }
+  .awssld, .bio-card, .contact-card {
+    top: 950px;
+    left: 100px;
+  }
+  iframe {
+    height: 70vh;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
