imports min_width_375px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -22,6 +22,7 @@
 @import './react_awesome_slider';
 @import './min_width_300px';
 @import './min_width_350px';
+@import './min_width_375px';
 
 *{
     box-sizing: border-box;
