--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -23,6 +23,7 @@
 @import './min_width_300px';
 @import './min_width_350px';
 @import './min_width_375px';
+@import './min_width_411px';
 
 *{
     box-sizing: border-box;
